--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,12 @@
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet" />
+<link rel="icon" href="/src/images/favicon.ico" />
 
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>React + Parcel</title>
+    <title>Food Fortress</title>
   </head>
   <body>
     <div id="root"></div>
